fix(demo): make it so the statusbar is visible in fullhd

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -20,7 +20,7 @@ body {
 #editors {
   position: relative;
   min-width: 0;
-  height: 55vh;
+  height: 45vh;
   border: 1px solid var(--vscode-editorWidget-border);
 }
 
